# glock-engine

./: .gitmodules  CMakeLists.txt  README.md
cmake/modules/: AddShaderLibrary.cmake
src/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer_impl.hpp  graphics_device.cpp  graphics_device.hpp  graphics_device_impl.hpp  main.cpp  material.cpp  material.hpp  model.hpp  model_impl.hpp  render_system.cpp  render_system.hpp  swapchain.cpp  swapchain.hpp  textures.cpp  textures.hpp  window.cpp  window.hpp
src/materials/: colorful.cpp  colorful.hpp  procedural.cpp  procedural.hpp  simple.cpp  simple.hpp  utils.cpp  utils.hpp
src/shaders/: CMakeLists.txt  colorful.frag  colorful.h.hlsl  colorful.vert  simple.frag  simple.h.hlsl  simple.vert  vaporwave_skybox.frag  vaporwave_skybox.h.hlsl  vaporwave_skybox.vert  white.frag  white.vert
